--- a/week10/TeamActivity/index.html
+++ b/week10/TeamActivity/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 10 Team Activity</title>
     <link rel="stylesheet" href="styles/teamActivityW10.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <a href="../index.html">Back</a>
+    </header>
     <main>
         <h1>Quake List</h1>
+        <p>Please see all 5 JS files - we did not get this assignment 100 percent finished</p>
         <ul id="quakeList" ></ul>
     </main>
     <footer></footer>
