--- a/week4/index.html
+++ b/week4/index.html
@@ -4,19 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 4</title>
     <link rel="stylesheet" href="styles/week4.css">
 </head>
 
 <body>
     <header>
+        <div id="weeklyList">Weekly Pages</div>
         <ol></ol>
     </header>
     <main>
         <h2>Week 4 Notes/Code Examples</h2>
 
         <h3>Links</h3>
-        <ol id="links"></ol>
+        <ol id="links">
+            <li>
+                <a href="teamActivity/index.html">Team Activity</a>
+            </li>
+        </ol>
         <p><em>Please see the JS file "week4.js", "Ch12.js", "student.js" and the console to see JS examples</em></p>
 
         <h3>Ch 8 Forms</h3>
