--- a/week5/TeamActivity/index.html
+++ b/week5/TeamActivity/index.html
@@ -12,6 +12,7 @@
     <main>
       <div><a href="../">Back ></a></div>
       <h1>Great hikes</h1>
+      <div id="backToHikesList"></div>
       <ul id="hikes" class="hikeStyles">
         <!-- your hike list should be build here. -->
       </ul>
