--- a/week5/index.html
+++ b/week5/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 5</title>
     <link rel="stylesheet" href="styles/week5.css">
 </head>
 <body>
     <header>
+        <div id="weeklyList">Weekly Pages</div>
         <ol></ol>
     </header>
 
     <h2>Week 5 Notes</h2>
     <h3>Links</h3>
     <ol id="links"></ol>
-    <p><em>Please see the JS file "Ch10.js" to see JS examples</em></p>
+    <p><em>Please see the JS file "Ch10.js" to see JS examples - All notes from this week are there</em></p>
     
     <script src="../scripts/weeks.js"></script>
     <script src="scripts/week5.js"></script>
