--- a/weightAndBalance/index.html
+++ b/weightAndBalance/index.html
@@ -12,9 +12,8 @@
 <body>
 
     <header>
-        <div>
-            <a href="../index.html" id="backLink">Back</a>
-        </div>
+        <div id="weeklyList">Weekly Pages</div>
+        <ol></ol>
     </header>
 
     <main>
@@ -95,6 +94,7 @@
     <!-- <script src="scripts/editAircraft.js" type="module"></script> -->
 
     <script src="scripts/main.js" type="module"></script>
+    <script src="../scripts/weeks.js"></script>
 </body>
 
 </html>
