--- a/week1/index.html
+++ b/week1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 1</title>
     <link rel="stylesheet" href="styles/week1.css">
     <style>
         * {
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <div id="weeklyList">Weekly Pages</div>
         <ol id="list"></ol>
     </header>
     <h1>Some observations:</h1>
