--- a/week2/index.html
+++ b/week2/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <div id="weeklyList">Weekly Pages</div>
         <ol id="list"></ol>
     </header>
     <main>
