--- a/week8/TeamActivity/index.html
+++ b/week8/TeamActivity/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/w8.css">
     <title>w8 Team Activity</title>
 </head>
 <body>
-    <head></head>
+    <head>
+        <a href="../index.html">Back</a>
+    </head>
 
     <main></main>
+    <div id="detailedShip"></div>
 
     <footer></footer>
     
