Fixed week 11 links

--- a/week11/index.html
+++ b/week11/index.html
@@ -33,7 +33,7 @@
     <footer></footer>
 
 
-    <script src="../../scripts/weeks.js"></script>
+    <script src="../scripts/weeks.js"></script>
     <script src="scripts/teamActivity.js" type="module"></script>
     <script src="scripts/auth.js" type="module"></script>
     
